# lee-hower

backend/: Pipfile  pyproject.toml  pytest.ini  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: a89d6f4abc3b_create_tasks_and_users_table.py
backend/app/: config.py  database.py  exceptions.py  main.py  models.py
backend/app/auth/: oauth2.py  routers.py  schemas.py
backend/app/db/: base.py  base_class.py  config.py
backend/app/tasks/: crud.py  models.py  router.py  routers.py  schema.py  schemas.py
backend/app/tests/: conftest.py  test_main.py  utils.py
backend/app/tests/auth/: test_auth_routes.py
backend/app/tests/users/: test_users_routes.py
backend/app/users/: crud.py  models.py  routers.py  schemas.py
backend/app/utils/: security.py
backend/migrations/: env.py
backend/migrations/versions/: 6bde080afaed_init.py  bd088a927323_update_fields.py
