[tool.poetry]
name = "lee-hower-backend"
version = "0.1.0"
description = "A unique todo app backend"
authors = ["Gabriel Rockson <thegabrielrockson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["email"], version = "^1.9.1"}
python-multipart = "^0.0.5"
bcrypt = "^3.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
